--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>TCR ADVANCED DISC 1+ PRO COMPACT</h1>
+    <img src="https://images2.giant-bicycles.com/b_white,c_pad,h_850,q_80/gizdvk1mqs68kiumkpi6/MY22TCRAdvanced1plusDisc-ProCompact_ColorABlackChrome.jpg" alt="Bicycle TCR" srcset="">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/js"></script>
 </body>
