--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>TCR ADVANCED DISC 1+ PRO COMPACT</h1>
     <img src="https://images2.giant-bicycles.com/b_white,c_pad,h_850,q_80/gizdvk1mqs68kiumkpi6/MY22TCRAdvanced1plusDisc-ProCompact_ColorABlackChrome.jpg" alt="Bicycle TCR" srcset="">
+    <p>GUNNING FOR THE RACE WIN OR DIGGING DEEP FOR A PR, THIS COMPOSITE ROAD RACING BIKE GIVES YOU THE SPEED, EFFICIENCY AND CONTROL TO PUSH IT TO THE LIMIT, AND THEN A LITTLE BIT MORE.</p>
+    <p>Reengineered with updated aerodynamic tube shaping in the headtube, downtube and fork, plus added clearance for larger diameter tires, this all-rounder delivers outstanding on-the-road efficiency. The Variant seatpost adds just enough compliance to give it a balanced, race-tuned feel on the road. And with its integrated disc-brake technology, it’s an all-weather, all-conditions race machine.</p>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/js"></script>
 </body>
