--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header><h1>Giant TCR</h1></header>
     <h2>TCR ADVANCED DISC 1+ PRO COMPACT</h2>
     <img src="https://images2.giant-bicycles.com/b_white,c_pad,h_850,q_80/gizdvk1mqs68kiumkpi6/MY22TCRAdvanced1plusDisc-ProCompact_ColorABlackChrome.jpg" alt="Bicycle TCR">
-    
+    <img src="tcr_adv_disc_tech.jpg" alt="Second TCR" class="small">
     <p>GUNNING FOR THE RACE WIN OR DIGGING DEEP FOR A PR, THIS COMPOSITE ROAD RACING BIKE GIVES YOU THE SPEED, EFFICIENCY AND CONTROL TO PUSH IT TO THE LIMIT, AND THEN A LITTLE BIT MORE.</p>
     <p>Reengineered with updated aerodynamic tube shaping in the headtube, downtube and fork, plus added clearance for larger diameter tires, this all-rounder delivers outstanding on-the-road efficiency. The Variant seatpost adds just enough compliance to give it a balanced, race-tuned feel on the road. And with its integrated disc-brake technology, it’s an all-weather, all-conditions race machine.</p>
 
